--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
 ---
 permalink: /404.html
 ---
-Probably you are looking for [@UltiRequiem](https://github.com/UltiRequiem) or the [new web page](https://ultirequiem.github.io)
+Probably you are looking for [@UltiRequiem](https://github.com/UltiRequiem) or the [new web page](https://ultirequiem.github.io).
